--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,12 @@
       <version>6.2.9</version>
     </dependency>
 
+    <dependency>
+      <groupId>jakarta.annotation</groupId>
+      <artifactId>jakarta.annotation-api</artifactId>
+      <version>2.1.1</version>
+    </dependency>
+
 
     <dependency>
       <groupId>junit</groupId>
